# pointzerver

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  Makefile  README.md
.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml
assets/: pointz.desktop
docs/: protocol.md
src/: main.rs  status_server.rs
src/domain/config/: mod.rs  server_config.rs
src/domain/models/: command.rs  discovery.rs  mod.rs
src/features/: mod.rs
src/features/command/: command_service.rs  mod.rs
src/features/discovery/: discovery_service.rs  mod.rs
src/input/: macos.rs  mod.rs  unix.rs  windows.rs
src/utils/: mod.rs
